--- a/Changes.org
+++ b/Changes.org
@@ -5,9 +5,9 @@
 #+link:      git https://code.orgmode.org/bzg/org-mode?p=org-mode.git;a=commit;h=%s
 #+link:      doc https://orgmode.org/worg/doc.html#%s
 #+description: Org Org-mode Emacs Changes ChangeLog release notes
-#+html_head:     <link rel="stylesheet" href="org-changes.css" type="text/css" />
+#+html_head:     <link rel="stylesheet" href="/resouces/style/org-changes.css" type="text/css" />
 
-#+include: "./preamble.html" export html
+#+include: "./resources/preamble.html" export html
 
 #+begin_export html
 <div class="banner slim"> <p id="a-quote"></p> </div>
@@ -349,7 +349,7 @@ This attribute overrides the =:width= and =:height= attributes.
 ,#+name: Beastie
 ,#+caption: I think I saw this curious horse already, but where ?
 ,#+LATEX_ATTR: :scale 2
-[[https://orgmode.org/img/org-mode-unicorn-logo.png]]
+[[https://orgmode.org/resources/img/org-mode-unicorn-logo.png]]
 #+end_example
 
 *** Allow specifying the target for a table of contents
