--- a/setup.org
+++ b/setup.org
@@ -23,4 +23,12 @@
 #+html_head:   <meta property="og:image:width" content="1280">
 #+html_head:   <meta property="og:image:height" content="640">
 #+html_head:   <link type="application/json+oembed" href="resouces/oembed-info.json" />
+#+html_head:   <link rel="apple-touch-icon" sizes="180x180" href="/resources/img/favicons/apple-touch-icon.png">
+#+html_head:   <link rel="icon" type="image/png" sizes="32x32" href="/resources/img/favicons/favicon-32x32.png">
+#+html_head:   <link rel="icon" type="image/png" sizes="16x16" href="/resources/img/favicons/favicon-16x16.png">
+#+html_head:   <link rel="manifest" href="/resources/img/favicons/site.webmanifest">
+#+html_head:   <link rel="mask-icon" href="/resources/img/favicons/safari-pinned-tab.svg" color="#77aa99">
+#+html_head:   <link rel="shortcut icon" href="/resources/img/favicons/favicon.ico">
+#+html_head:   <meta name="msapplication-TileColor" content="#77aa99">
+#+html_head:   <meta name="msapplication-config" content="/resources/img/favicons/browserconfig.xml">
 #+html_head:   <link rel="stylesheet" href="/resources/style/org.css" type="text/css" />
