--- a/changes-older.org
+++ b/changes-older.org
@@ -1,4 +1,4 @@
-#+title:  Org mode for Emacs -- Older (!) Release notes
+#+title:  Older (!) Release notes | Org mode
 #+author:    Carsten Dominik
 #+email:     carsten at orgmode dot org
 #+setupfile: setup.org
@@ -7,6 +7,20 @@
 
 #+begin_export html
 <div class="banner slim"> <p id="a-quote"></p> </div>
+#+end_export
+
+#+begin_export html
+<style>
+  .outline-3 {
+    background-color: initial;
+    border-left: none;
+    width: initial;
+    padding: 0;
+  }
+  h3 {
+    display: initial;
+  }
+</style>
 #+end_export
 
 * Version 6.32
