--- a/changes-older.org
+++ b/changes-older.org
@@ -5,22 +5,10 @@
 #+description: Org Org-mode Emacs Changes ChangeLog release notes archives
 #+include: "./resources/preamble.html" export html
 
-#+begin_export html
-<div class="banner slim"> <p id="a-quote"></p> </div>
-#+end_export
+#+include: "./resources/normal-outline-3.html" export html
 
 #+begin_export html
-<style>
-  .outline-3 {
-    background-color: initial;
-    border-left: none;
-    width: initial;
-    padding: 0;
-  }
-  h3 {
-    display: initial;
-  }
-</style>
+<div class="banner slim"> <p id="a-quote"></p> </div>
 #+end_export
 
 * Version 6.32
